src/styles/theme/default.css
/* skin-aria-ng core */
.skin-aria-ng {
    overflow-y: hidden;
}

.skin-aria-ng,
.skin-aria-ng h1,
.skin-aria-ng h2,
.skin-aria-ng h3,
.skin-aria-ng h4,
.skin-aria-ng h5,
.skin-aria-ng h6,
.skin-aria-ng .h1,
.skin-aria-ng .h2,
.skin-aria-ng .h3,
.skin-aria-ng .h4,
.skin-aria-ng .h5,
.skin-aria-ng .h6,
.skin-aria-ng .main-header .logo,
.skin-aria-ng .sweet-alert,
.skin-aria-ng .popover,
.skin-aria-ng .tooltip {
    font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
}

.skin-aria-ng .main-header .navbar {
    background-color: #f6f6f6;
    border-bottom: 1px solid #ddd;
}

.skin-aria-ng .main-header .navbar .nav > li > a {
    color: #707070;
    font-size: 16px;
}

.skin-aria-ng .main-header .navbar .nav > li > a:hover,
.skin-aria-ng .main-header .navbar .nav > li > a:active,
.skin-aria-ng .main-header .navbar .nav > li > a:focus,
.skin-aria-ng .main-header .navbar .nav .open > a,
.skin-aria-ng .main-header .navbar .nav .open > a:hover,
.skin-aria-ng .main-header .navbar .nav .open > a:focus,
.skin-aria-ng .main-header .navbar .nav > .active > a {
    color: #0080ff;
}

.skin-aria-ng .main-header .navbar .nav > li.disabled > a {
    color: #ccc !important;
}

.skin-aria-ng .main-header .bt-file-filter-toolbar {
    border-left: 1px solid #e1e1e1;
}

.skin-aria-ng .main-header .bt-file-filter-rule {
    color: #9aa1a7;
    background-color: #f3f4f5;
    box-shadow: none;
}

.skin-aria-ng .main-header .bt-file-filter-rule.is-enabled {
    color: #606060;
    background-color: #fff;
    border-left-color: #2196f3;
    box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
}

.skin-aria-ng .main-header .bt-file-filter-rule.has-error {
    border-left-color: #dd4b39;
}

.skin-aria-ng .main-header .bt-file-filter-error {
    color: #c34737;
}

.skin-aria-ng .main-header .bt-file-filter-size {
    color: #454545;
    background-color: #fff;
    border-color: #cfd4d8;
}

.skin-aria-ng .main-header .bt-file-filter-size:disabled {
    color: #999;
    background-color: #eceff1;
}

.skin-aria-ng .main-header .bt-file-filter-size.has-error {
    border-color: #dd4b39;
    box-shadow: none;
}

.skin-aria-ng .main-header .bt-file-filter-size.has-error:focus {
    border-color: #843534;
    box-shadow: 0 0 0 1px rgba(221, 75, 57, .25);
}

.skin-aria-ng .main-header .bt-file-filter-status {
    color: #208fe5;
}

.skin-aria-ng .main-header .bt-file-filter-status.status-complete {
    color: #2f9d58;
}

.skin-aria-ng .main-header .bt-file-filter-status.status-warning {
    color: #c47a12;
}

.skin-aria-ng .main-header .navbar .nav > li.divider {
    padding: 10px 0 10px 0;
    margin-left: 4px;
    margin-right: 4px;
    border-right: 1px solid #ccc;
    position: relative;
    top: 15px;
}

.skin-aria-ng .main-header .navbar .navbar-searchbar .form-control-icon {
    color: #999999;
}

@media (max-width: 767px) {
    .skin-aria-ng .main-header .navbar {
        padding-left: 20px;
    }

    .skin-aria-ng .main-header .navbar .navbar-nav {
        margin-left: -10px;
    }

    .skin-aria-ng .main-header .navbar .nav > li.divider {
        margin-left: 0;
        margin-right: 0;
        top: 5px;
    }
}

.skin-aria-ng .main-header .logo {
    background-color: #3c4852;
    color: #ffffff;
    border-bottom: 1px solid #59636b;
}

.skin-aria-ng .main-header .logo .logo-lg:hover {
    color: #cccccc;
}

.skin-aria-ng .main-header .logo .logo-lg .logo-lg-title {
    margin-right: 6px;
}

.skin-aria-ng .main-header .logo .dropdown-menu {
    margin-top: -1px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.skin-aria-ng .main-header .logo .dropdown-menu > li.active > a {
    color: #777;
    background-color: #fff;
}

.skin-aria-ng .main-header .logo .dropdown-menu > li.active:hover > a {
    color: #333;
    background-color: #e1e3e9;
}

.skin-aria-ng .content-header {
    background: transparent;
}

.skin-aria-ng .wrapper,
.skin-aria-ng .main-sidebar,
.skin-aria-ng .left-side {
    background-color: #3c4852;
}

.skin-aria-ng .sidebar-menu > li.header {
    color: #707070;
    background-color: #2e343c;
    padding-top: 3px;
    padding-bottom: 3px;
}

.skin-aria-ng .sidebar-menu > li > a {
    border-left: 3px solid transparent;
    padding-top: 9px;
    padding-bottom: 9px;
}

.skin-aria-ng .sidebar-menu > li:hover > a {
    color: #dfdfdf;
    background-color: #313a42;
}

.skin-aria-ng .sidebar-menu > li.active > a {
    color: #5399e8;
    background-color: #252c30;
}

.skin-aria-ng .sidebar-menu > li.treeview:hover > a {
    color: #a2b5b9;
    background-color: #3c4852;
}

.skin-aria-ng .sidebar-menu > li.treeview.active > a, .skin-aria-ng .sidebar-menu > li.treeview.active:hover > a {
    color: #5399e8;
    background-color: #3c4852;
}

.skin-aria-ng .sidebar-menu > li.treeview > a:hover {
    color: #dfdfdf;
    background-color: #313a42;
}

.skin-aria-ng .sidebar-menu > li.treeview > ul.treeview-menu {
    margin: 0;
    padding: 0;
    background-color: #3c4852;
}

.skin-aria-ng .sidebar-menu > li.treeview > ul.treeview-menu > li > a {
    color: #8aa4af;
}

.skin-aria-ng .sidebar-menu > li.treeview > ul.treeview-menu > li > a:hover {
    color: #dfdfdf;
    background-color: #313a42;
}

.skin-aria-ng .sidebar-menu > li.treeview > ul.treeview-menu > li.active > a {
    color: #5399e8;
    background-color: #252c30;
}

.skin-aria-ng .sidebar-menu i.fa {
    font-size: 18px;
    margin-right: 2px;
}

.skin-aria-ng .sidebar a {
    color: #a2b5b9;
}

.skin-aria-ng .sidebar a:hover {
    text-decoration: none;
}

@media (max-width: 767px) {
    .skin-aria-ng .main-sidebar {
        margin-top: 5px;
    }
}

.skin-aria-ng .sidebar .status-label {
    max-width: 95px;
}

.skin-aria-ng .content-wrapper, .right-side {
    background-color: #fff;
}

.skin-aria-ng .content-wrapper .form-control[type='text'] {
    padding-left: 14px;
}

@media screen and (max-width: 767px) {
    .skin-aria-ng .content-wrapper .content {
        margin-top: 5px;
    }
}
/* ... */

